# unitree_sdk2_go2_agentskill

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt
artifacts/go2_grpc/: go2_sport_grpc_server.aarch64
cmake/toolchains/: aarch64-ubuntu2004.cmake
docs/: go2_grpc_cross_compile.md  go2_grpc_readme.md
models/yolo26/aarch64/: =0.1.71
openclaw/skills/: go2_agent_tool_skill.md  go2_grpc_microphone_skill.md  go2_grpc_skill.md
openclaw/tools/: go2_grpc_tool.md
proto/: go2_sport.proto
python/: README.md  pyproject.toml  requirements.txt
python/go2_grpc_tool/: __init__.py  cli.py  client.py
python/go2_grpc_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: generate_python_stubs.sh
scripts/go2_grpc/: audio_play_webrtc_sidecar.py  bootstrap_cross_grpc.sh  bootstrap_local_grpc.sh  convert_yolo_to_trt.sh  cross_build_aarch64.sh  deploy.sh  exec_action.sh  install_systemd_service.sh  kill.sh  local_build_x64.sh  local_convert_yolo_x64.sh  local_test_x64.sh  mic_bridge_sidecar_ctl.sh  mic_bridge_webrtc_sidecar.py  mic_probe_webrtc.py  remote_server_ctl.sh  run.sh  signal_hook.sh  status.sh  yolo_greeting_autoplay_client.py
scripts/go2_grpc/systemd/: go2_sport_grpc.env  go2_sport_grpc.service  go2_yolo_greeting_autoplay.env  go2_yolo_greeting_autoplay.service
src/go2_grpc/: CMakeLists.txt  go2_sport_grpc_server.cpp
src/go2_grpc/tests/: go2_grpc_audio_mock_test.cpp  go2_grpc_proto_smoke_test.cpp
